--- a/index.html
+++ b/index.html
@@ -253,9 +253,34 @@ function mostrarBannerInstalacao(texto) {
   document.body.appendChild(banner);
 }
 </script>
+  <script>
+const isIOS = /iphone|ipad|ipod/i.test(navigator.userAgent);
+const isStandalone = window.matchMedia('(display-mode: standalone)').matches;
 
+if (isIOS && !isStandalone) {
+  const iosBanner = document.createElement('div');
+  iosBanner.style = `
+    position:fixed;
+    bottom:0;
+    left:0;
+    right:0;
+    background:#000;
+    color:#fff;
+    padding:14px;
+    text-align:center;
+    font-weight:600;
+    z-index:9999;
+  `;
+  iosBanner.innerHTML = `
+    📲 Instale o app:<br>
+    Toque em <strong>Compartilhar</strong> ⬆️ e depois <strong>Adicionar à Tela de Início</strong>
+  `;
+  document.body.appendChild(iosBanner);
+}
+</script>
 </body>
 </html>
+
 
 
 
