--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head><button id="btnInstall" style="display:none;">⬇️ Instalar App</button>
-
+<head>
 <meta charset="UTF-8">
 <title>Controle Financeiro</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
@@ -83,9 +81,7 @@ th{
   background:var(--primary);
   color:#fff;
 }
-canvas{
-  max-width:100%;
-}
+canvas{max-width:100%}
 </style>
 </head>
 
@@ -146,7 +142,6 @@ canvas{
 <option value="pizza">🍕 Despesas por categoria</option>
 <option value="linha">📈 Evolução do saldo</option>
 </select>
-
 <canvas id="grafico"></canvas>
 </div>
 
@@ -158,131 +153,5 @@ canvas{
 </main>
 
 <script src="js/script.js"></script>
-  <script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(reg => {
-        console.log('Service Worker registrado:', reg.scope);
-      })
-      .catch(err => {
-        console.error('Erro ao registrar Service Worker:', err);
-      });
-  });
-}
-</script>
-  <script>
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/service-worker.js').then(reg => {
-
-    if (reg.waiting) showUpdate();
-
-    reg.addEventListener('updatefound', () => {
-      const newWorker = reg.installing;
-      newWorker.addEventListener('statechange', () => {
-        if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
-          showUpdate();
-        }
-      });
-    });
-
-    function showUpdate() {
-      const div = document.createElement('div');
-      div.style = `
-        position:fixed;
-        bottom:20px;
-        left:50%;
-        transform:translateX(-50%);
-        background:#4CAF50;
-        color:#fff;
-        padding:12px 16px;
-        border-radius:10px;
-        font-weight:600;
-        z-index:9999;
-        cursor:pointer;
-      `;
-      div.innerText = '🔄 Nova versão disponível — Atualizar';
-      div.onclick = () => {
-        reg.waiting.postMessage('SKIP_WAITING');
-        window.location.reload();
-      };
-      document.body.appendChild(div);
-    }
-  });
-}
-</script>
-<script>
-let deferredPrompt;
-
-// ANDROID / DESKTOP
-window.addEventListener('beforeinstallprompt', e => {
-  e.preventDefault();
-  deferredPrompt = e;
-
-  if (!window.matchMedia('(display-mode: standalone)').matches) {
-    mostrarBannerInstalacao('📲 Instalar app para receber atualizações automáticas');
-  }
-});
-
-function mostrarBannerInstalacao(texto) {
-  const banner = document.createElement('div');
-  banner.id = 'installBanner';
-  banner.style = `
-    position:fixed;
-    bottom:0;
-    left:0;
-    right:0;
-    background:#4CAF50;
-    color:#fff;
-    padding:14px;
-    text-align:center;
-    font-weight:600;
-    z-index:9999;
-    cursor:pointer;
-  `;
-  banner.innerText = texto;
-
-  banner.onclick = async () => {
-    if (deferredPrompt) {
-      deferredPrompt.prompt();
-      await deferredPrompt.userChoice;
-      deferredPrompt = null;
-    }
-    banner.remove();
-  };
-
-  document.body.appendChild(banner);
-}
-</script>
-  <script>
-const isIOS = /iphone|ipad|ipod/i.test(navigator.userAgent);
-const isStandalone = window.matchMedia('(display-mode: standalone)').matches;
-
-if (isIOS && !isStandalone) {
-  const iosBanner = document.createElement('div');
-  iosBanner.style = `
-    position:fixed;
-    bottom:0;
-    left:0;
-    right:0;
-    background:#000;
-    color:#fff;
-    padding:14px;
-    text-align:center;
-    font-weight:600;
-    z-index:9999;
-  `;
-  iosBanner.innerHTML = `
-    📲 Instale o app:<br>
-    Toque em <strong>Compartilhar</strong> ⬆️ e depois <strong>Adicionar à Tela de Início</strong>
-  `;
-  document.body.appendChild(iosBanner);
-}
-</script>
 </body>
 </html>
-
-
-
-
-
